--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
